fix horizontal scroll

--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -7,6 +7,7 @@ footer {
     margin: 0 auto;
     max-width: 600px;
     width: 100%;
+    box-sizing: border-box;
 
     .nav-menu {
       display: flex;
